==> Dodo17sky/Embedded/STM32/RealProjects/STM32_Dune/src/Adc.c <==
/*--------------------------------------------------------------------------------
*                           Libraries
*--------------------------------------------------------------------------------*/
#include "Adc.h"
#include "stm32f10x_adc.h"
#include "stm32f10x_rcc.h"

/*--------------------------------------------------------------------------------
*                           Const and Macro
*--------------------------------------------------------------------------------*/

/*--------------------------------------------------------------------------------
*                           Global variables
*--------------------------------------------------------------------------------*/

/*--------------------------------------------------------------------------------
*                           Functions prototypes
*--------------------------------------------------------------------------------*/


/*--------------------------------------------------------------------------------
@name       Adc_Init
@brief      
@paramIn    
@paramOut   
*--------------------------------------------------------------------------------*/
U8 Adc_Init(void)
{
    U8 initStatus = RETURN_OK;

    ADC_InitTypeDef  ADC_InitStructure;
    /* PCLK2 is the APB2 clock */
    /* ADCCLK = PCLK2/6 = 72/6 = 12MHz*/
    RCC_ADCCLKConfig(RCC_PCLK2_Div6);
    
    /* Enable ADC1 clock so that we can talk to it */
    RCC_APB2PeriphClockCmd(RCC_APB2Periph_ADC1, ENABLE);
    /* Put everything back to power-on defaults */
    ADC_DeInit(ADC1);
    
    /* ADC1 Configuration ------------------------------------------------------*/
    /* ADC1 and ADC2 operate independently */
    ADC_InitStructure.ADC_Mode = ADC_Mode_Independent;
    /* Disable the scan conversion so we do one at a time */
    ADC_InitStructure.ADC_ScanConvMode = DISABLE;
    /* Don't do contimuous conversions - do them on demand */
    ADC_InitStructure.ADC_ContinuousConvMode = DISABLE;
    /* Start conversin by software, not an external trigger */
    ADC_InitStructure.ADC_ExternalTrigConv = ADC_ExternalTrigConv_None;
    /* Conversions are 12 bit - put them in the lower 12 bits of the result */
    ADC_InitStructure.ADC_DataAlign = ADC_DataAlign_Right;
    /* Say how many channels would be used by the sequencer */
    ADC_InitStructure.ADC_NbrOfChannel = 1;
    
    /* Now do the setup */
    ADC_Init(ADC1, &ADC_InitStructure);
    /* Enable ADC1 */
    ADC_Cmd(ADC1, ENABLE);
    
    /* Enable ADC1 reset calibaration register */
    ADC_ResetCalibration(ADC1);
    /* Check the end of ADC1 reset calibration register */
    while(ADC_GetResetCalibrationStatus(ADC1));
    /* Start ADC1 calibaration */
    ADC_StartCalibration(ADC1);
    /* Check the end of ADC1 calibration */
    while(ADC_GetCalibrationStatus(ADC1)); 

    return initStatus;
}

/*--------------------------------------------------------------------------------
@name       Adc_Deinit
@brief      
@paramIn    
@paramOut   
*--------------------------------------------------------------------------------*/
U8 Adc_Deinit(void)
{
    U8 deinitStatus = RETURN_OK;

    ADC_Cmd(ADC1, DISABLE);

    return deinitStatus;
}

/*--------------------------------------------------------------------------------
@name       Adc_Read
@brief      
@paramIn    channel: Adc channel to be read
@paramOut   
*--------------------------------------------------------------------------------*/
U16 Adc_Read(U8 channel)
{
    ADC_RegularChannelConfig(ADC1, channel, 1, ADC_SampleTime_1Cycles5);
    // Start the conversion
    ADC_SoftwareStartConvCmd(ADC1, ENABLE);
    // Wait until conversion completion
    while(ADC_GetFlagStatus(ADC1, ADC_FLAG_EOC) == RESET);
    // Get the conversion value
    return ADC_GetConversionValue(ADC1);
}
